# my-fastapi-template

./: README.md  pyproject.toml
src/: main.py
src/controllers/: index.py
src/models/: user.py
src/statics/js/: index.js
src/views/: index.html
