[tool.poetry]
name = "my-fastapi-template"
version = "0.1.0"
description = "项目简介"
license = "MIT"
authors = ["wujingtao <601595686@qq.com>"]
readme = "README.md"
homepage = "https://github.com/wu-jingtao/my-fastapi-template"
repository = "https://github.com/wu-jingtao/my-fastapi-template"
documentation = "https://github.com/wu-jingtao/my-fastapi-template"
keywords = ["my-fastapi-template"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.109.2"}

[tool.poetry.group.dev.dependencies]


[[tool.poetry.source]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "default"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
